<resources>
    <string name="app_name">YABM</string>
    <string name="extended_app_name">Yet Another Bookmark Manager</string>
    <string name="version">Versione %1$s</string>
    <string name="backup_title">Backup</string>
    <string name="bookmarks_manager_title">Importa/Esporta</string>
    <string name="categories_title">Categorie</string>
    <string name="category_title">Categoria:</string>
    <string name="modify_category_title">Modifica categoria</string>
    <string name="new_category_title">Nuova categoria</string>
    <string name="all_bookmarks_title">Tutti i segnalibri</string>
    <string name="archived_bookmarks">Archiviati</string>
    <string name="default_bookmarks">Default</string>
    <string name="feedback_title">Invia feedback</string>
    <string name="new_bookmark_title">Nuovo Segnalibro</string>
    <string name="cancel">Annulla</string>
    <string name="confirm">Conferma</string>
    <string name="retry">Indietro</string>
    <string name="reminder_inserted">Promemoria inserito:</string>
    <string name="next">Avanti</string>
    <string name="new_reminder">Inserisci un promemoria:</string>
    <string name="settings_title">Impostazioni</string>
    <string name="imported">Importati</string>
    <string name="insert_category_title">Inserisci la categoria</string>
    <string name="backup_description">Tieni i tuoi segnalibri al sicuro!</string>
    <string name="auto_backup">Backup automatico</string>
    <string name="auto_backup_description">Se abilitato verrà creeto automaticamente un file di backup</string>
    <string name="create_backup">Crea backup</string>
    <string name="restore_backup">Ripristina backup</string>
    <string name="import_export_description">Porta i tuoi segnalilbri sempre con te!</string>
    <string name="import_description">Importa da file .HMTL</string>
    <string name="export_description">Esporta su file .HTML</string>
    <string name="export_locked_bookmarks">Esporta segnalibri protetti</string>
    <string name="export_locked_description">Se abilitato verranno esportati i segnalibri protetti da password</string>
    <string name="contact_us">Contattaci:</string>
    <string name="message_title">Scrivi un titolo</string>
    <string name="message_text">Testo</string>
    <string name="link">Link:</string>
    <string name="insert_link">Inserisci il link</string>
    <string name="bookmark_title">Titolo:</string>
    <string name="insert_title">Inserisci un titolo</string>
    <string name="bookmark_category">Seleziona una categoria:</string>
    <string name="no_bookmarks">Al momento non hai segnalibri</string>
    <string name="theme">Tema</string>
    <string name="manage_categories">Gestisci categorie</string>
    <string name="started_category_displayed">Categoria visualizzata all\'avvio</string>
    <string name="import_export">Importa/Esporta</string>
    <string name="backup">Backup</string>
    <string name="handle_password">Gestisci password</string>
    <string name="send_feedback">Invia un feedback</string>
    <string name="info_app">Info App</string>
    <string name="action_title">Scegli l\'azione</string>
    <string name="open">Apri</string>
    <string name="copy">Copia</string>
    <string name="reminder_title">Inserisci un promemoria</string>
    <string name="add_image">Aggiungi un\'immagine</string>
    <string name="loading">Caricamento…</string>
    <string name="automatic_restore">Ripristina automaticamente</string>
    <string name="manual_restore">Ripristina manualmente</string>
    <string name="warning_description">Per effettuare l\'operazione consenti di accedere alla memoria di archiviazione</string>
    <string name="go_to_settings">Vai a Impostazioni</string>
    <string name="search">Cerca</string>
    <string name="preview">Anteprima</string>
    <string name="modify">Modifica</string>
    <string name="delete">Elimina</string>
    <string name="modify_bookmark">Modifica segnalibro</string>
    <string name="insert_reminder">Inserisci un promemoria:</string>
    <string name="reminder">Promemoria:</string>
    <string name="optional">Opzionale *</string>
    <string name="help">Aiuto</string>
    <string name="skip">Salta</string>
    <string name="finished">Finito</string>
    <string name="add_bookmark">Aggiungere un segnbalibro</string>
    <string name="modify_bookmark_help">Modificare un segnalibro</string>
    <string name="delete_bookmark_help">Eliminare un segnalibro</string>
    <string name="archive_bookmark_help">Archiviare un segnalibro</string>
    <string name="browser_menu">Apri il menu del browser</string>
    <string name="select_share">Seleziona condividi</string>
    <string name="choose_app">Seleziona \"Yabm\"</string>
    <string name="add_bookmark_help">Aggiungi il segnalibro</string>
    <string name="bookmark_menu">Apri il menu del segnalibro</string>
    <string name="modify_help">Seleziona modifica</string>
    <string name="save_edit">Salva le modifiche</string>
    <string name="delete_help">Seleziona elimina</string>
    <string name="delete_swipe">Oppure effettua uno swipe verso\ndestra sul segnalibro</string>
    <string name="archive_swipe">Effettua uno swipe verso sinistra sul segnalibro</string>
    <string name="select_menu">Seleziona il menu</string>
    <string name="archive_help">Seleziona Archiviati per vedere tutti i segnalibri archiviati</string>
    <string name="invalid_link">Link non valido</string>
    <string name="max_title">Lunghezza massima raggiunta</string>
    <string name="ascending_name_sort">Per titolo (A - Z)</string>
    <string name="descending_name_sort">Per titolo (Z - A)</string>
    <string name="ascending_date_sort">Per data di creazione</string>
    <string name="descending_date_sort">Per ultima modifica</string>
    <string name="archive">Archive</string>
    <string name="unarchive">Unarchive</string>
    <string name="select_all">Select All</string>
    <string name="delete_title">Delete</string>
    <string name="move">Move</string>
    <string name="category_selection">Scegli la categoria</string>
    <string name="all_bookmarks_deleted">Tutti i segnalibri verranno eliminati!</string>
    <string name="password">Password</string>
    <string name="new_password">Inserisci una password</string>
    <string name="confirm_password">Conferma password</string>
    <string name="add_password">Aggiungi una password</string>
    <string name="change_password">Modifica la password</string>
    <string name="empty_fields">I campi non possono essere vuoti!</string>
    <string name="password_updated">Password aggiornata!</string>
    <string name="impossible_update_password">Impossibile aggiornare la password!</string>
    <string name="same_previous_password">La password è uguale alla precedente!</string>
    <string name="passwords_not_match">Le password non corrispondono!</string>
    <string name="password_added">Password aggiunta!</string>
    <string name="impossible_add_password">Impossibile aggiungere la password!</string>
    <string name="wrong_password">Password errata!</string>
    <string name="lock_with_password">Blocca con password</string>
    <string name="categories_updated">Categorie aggiornate!</string>
    <string name="ok">OK</string>
    <string name="impossible_update_categories">mpossibile aggiungere le categorie!</string>
    <string name="important">Importante!</string>
    <string name="password_info">Attenzione una volta impostata la password sarà impossible recuperarla!</string>
    <string name="description">Descrizione:</string>
    <string name="title_activity_bookmark_preview">BookmarkPreviewActivity</string>
    <string name="something_wrong">Qualcosa è andato storto</string>
    <string name="no_password_inserted">Non è impostata alcuna password</string>
    <string name="no_bookmarks_to_export">Non ci sono segnalibri da esportare</string>
    <string name="bookmark_question">segnalibro?</string>
    <string name="bookmarks_question">segnalibri?</string>
    <string name="bookmarks_imported">Segnalibri importati</string>
    <string name="import_bookmark_question">Sei sicuro di voler importare </string>
    <string name="empty_link">Inserisci un link!</string>
    <string name="insert_category">Inserisci la categoria</string>
    <string name="category_inserted">Categoria inserita correttamente</string>
    <string name="existing_category">Categoria già presente!</string>
    <string name="empty_category_name">Inserisci il nome di una categoria!</string>
    <string name="invalid_date">La data non è valida</string>
    <string name="invalid_time">L\'orario non è valido</string>
    <string name="reminder_modified">Promemoria modificato correttamente</string>
    <string name="reminder_deleted">Promemoria eliminato</string>
    <string name="bookmark_editing_question">Sei sicuro di voler modificare il segnalibro?</string>
    <string name="bookmark_inserting_question">Sei sicuro di voler inserire il segnalibro?</string>
    <string name="bookmark_modified">Segnalibro modificato!</string>
    <string name="unable_edit_bookmark">Impossibilie modificare il segnalibro!</string>
    <string name="bookmark_added">Segnalibro aggiunto!</string>
    <string name="existing_bookmark">Segnalibro già presente!</string>
    <string name="exit_question">Sei sicuro di voler uscire?\nTutti i cambiamenti andranno persi</string>
    <string name="category_modified">Categoria modificate correttamente!</string>
    <string name="category_elimination_question">Sei sicuro di voler eliminare la categoia?\nTutti i segnalibri verranno eliminati</string>
    <string name="unable_delete_category">Impossibile eliminare la categoria</string>
    <string name="removed_from_archive">rimosso dall\'archivio.</string>
    <string name="bookmark_archived">archiviato.</string>
    <string name="bookmark_elimination_question">Sei sicuro di voler eliminare il segnalibro?</string>
    <string name="bookmark_deleted">Segnalibro eliminato</string>
    <string name="unable_delete_bookmark">Impossibile eliminare il segnalibro</string>
    <string name="delete_question">Sei sicuro di voler eliminare</string>
    <string name="bookmark_deleted_message">eliminato!</string>
    <string name="bookmarks_deleted_message">eliminati!</string>
    <string name="bookmarks_message">Segnalibri</string>
    <string name="bookmark_message">Segnalibro</string>
    <string name="bookmarks_archived_message">archiviati!</string>
    <string name="bookmark_archived_message">archiviato!</string>
    <string name="bookmarks_restored_message">ripristinati!</string>
    <string name="bookmark_restored_message">ripristinato!</string>
    <string name="bookmark_archive_question">Sei sicuro di voler archiviare</string>
    <string name="bookmark_restore_question">Sei sicuro di voler ripristinare</string>
    <string name="backup_created">Backup creato correttamente</string>
    <string name="unable_create_backup">Impossibile creare il backup</string>
    <string name="backup_restored">Backup ripristinato correttamente</string>
    <string name="unable_restore_backup">Impossibile ripristinare il backup</string>
    <string name="file_not_valid">File selezionato non valido</string>
    <string name="choose_operation">Scegli l\'operazione</string>
    <string name="no_backups">Non sono presenti backup da ripristinare</string>
    <string name="unable_set_backup">Impossibile impostare il backup automatico</string>
    <string name="category_question">categoria?</string>
    <string name="categories_question">categorie?</string>
    <string name="category_deleted_message">eliminata!</string>
    <string name="categories_deleted_message">eliminate!</string>
    <string name="category_message">Categoria</string>
    <string name="categories_message">Categorie</string>
    <string name="choose_an_application">Scegli una applicazione</string>
    <string name="give_us_information">Scrivi qualcosa per darci maggiori informazioni</string>
</resources>