<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/move"
        android:icon="@drawable/ic_move"
        android:title="@string/move"
        app:showAsAction="always"/>

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_small_delete"
        android:title="@string/delete_title"
        app:showAsAction="always"/>

    <item
        android:id="@+id/archive"
        android:icon="@drawable/ic_archive"
        android:title="@string/archive"
        app:showAsAction="always"/>

    <item
        android:id="@+id/unarchive"
        android:icon="@drawable/ic_unarchive"
        android:title="@string/unarchive"
        app:showAsAction="always"/>

    <item
        android:id="@+id/select_all"
        android:icon="@drawable/ic_select_all"
        android:title="@string/select_all"
        app:showAsAction="always"/>

</menu>