<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/date_ascending"
            android:icon="@drawable/ic_down_arrow"
            android:title="@string/ascending_date_sort" />

        <item
            android:id="@+id/date_descending"
            android:icon="@drawable/ic_up_arrow"
            android:title="@string/descending_date_sort" />

        <item
            android:id="@+id/name_ascending"
            android:icon="@drawable/ic_name_sort"
            android:title="@string/ascending_name_sort" />

        <item
            android:id="@+id/name_descending"
            android:icon="@drawable/ic_name_sort"
            android:title="@string/descending_name_sort" />
    </group>

</menu>
