<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.HelpMenuActivity">

    <include
        layout="@layout/toolbar">
    </include>

    <RelativeLayout
        android:id="@+id/add_bookmark_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="20dp"
        tools:ignore="MissingConstraints"
        android:layout_marginStart="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_add_circle">
        </ImageView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/add_bookmark"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingStart="45dp"
                tools:ignore="RtlSymmetry">
            </TextView>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/modify_bookmark_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="10dp"
        tools:ignore="MissingConstraints"
        android:layout_marginStart="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_modify_categories">
        </ImageView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/modify_bookmark_help"
                android:paddingStart="45dp"
                android:textSize="18sp"
                android:textStyle="bold">
            </TextView>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/delete_bookmark_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="10dp"
        tools:ignore="MissingConstraints"
        android:layout_marginStart="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_delete_help">
        </ImageView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/delete_bookmark_help"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingStart="45dp"
                tools:ignore="RtlSymmetry">
            </TextView>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/archive_bookmark_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="10dp"
        tools:ignore="MissingConstraints"
        android:layout_marginStart="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_archive_help">
        </ImageView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/archive_bookmark_help"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingStart="45dp"
                tools:ignore="RtlSymmetry">
            </TextView>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>