<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BookmarkPreviewActivity">

    <include
        layout="@layout/toolbar">
    </include>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="80dp"
            android:text="@string/link"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="45dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:maxLines="@android:integer/status_bar_notification_info_maxnum"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textIsSelectable="true"
            android:background="@drawable/custom_background_edit_text"
            android:scrollHorizontally="true">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="35dp"
            android:text="@string/bookmark_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="45dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:maxLines="@android:integer/status_bar_notification_info_maxnum"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textIsSelectable="true"
            android:background="@drawable/custom_background_edit_text"
            android:scrollHorizontally="true">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:text="@string/category_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="45dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:maxLines="@android:integer/status_bar_notification_info_maxnum"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textIsSelectable="true"
            android:background="@drawable/custom_background_edit_text"
            android:scrollHorizontally="true">
        </TextView>

        <TextView
            android:id="@+id/description_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:text="@string/description"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="45dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:maxLines="@android:integer/status_bar_notification_info_maxnum"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textIsSelectable="true"
            android:background="@drawable/custom_background_edit_text"
            android:scrollHorizontally="true">
        </TextView>

        <TextView
            android:id="@+id/reminder_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="35dp"
            android:text="@string/reminder"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginEnd="8dp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/inserted_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="18sp"
                    android:visibility="invisible" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center|bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.993"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/insert_link_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:src="@drawable/ic_check"
            tools:ignore="MissingConstraints"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>